refactor: collect(Collectors.toList())를 toList()로 대체하여 단순성과 가독성 개선